tests/should-fail/rawcodelit-7.j
globals
    integer k = 'abc'
endglobals